chandeliers-lus/tests/compile_fail/ui/causality/redef-var-ii.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-ii.rs:5:17
  |
5 |     node foo(a, a : int) returns ();
  |                 ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-ii.rs:5:14
  |
5 |     node foo(a, a : int) returns ();
  |              ^
